--- a/now.json
+++ b/now.json
@@ -1,10 +1,7 @@
 {
     "version": 1,
     "name": "nodejs-express",
-    "builds": [
-        { "src": "index.js", "use": "@now/node-server" }
-    ],
     "routes": [
-        { "src": "/", "methods": ["POST"], "dest": "/index" },
+        { "src": "/", "methods": ["POST"], "dest": "/index" }
     ]
 }
