--- a/now.json
+++ b/now.json
@@ -2,7 +2,7 @@
     "version": 2,
     "name": "nodejs-express",
     "builds": [
-        { "src": "app.js", "use": "@now/node" }
+        { "src": "*.html", "use": "@now/static" }
     ],
     "routes": [
         { "src": "/", "methods": ["GET"], "dest": "/index.html" }
