--- a/now.json
+++ b/now.json
@@ -1,10 +1,7 @@
 {
     "version": 2,
-    "name": "nodejs-express",
+    "name": "nodejs",
     "builds": [
-        { "src": "*.html", "use": "@now/static" }
-    ],
-    "routes": [
-        { "src": "/", "methods": ["GET"], "dest": "/index.html" }
+        { "src": "*.js", "use": "@now/node" }
     ]
 }
